--- a/TODO
+++ b/TODO
@@ -1,12 +1,11 @@
-images/pihi - potrebuju ousko
-
 casem pridat i statistiku a sumarizace za hodiny/dny
-chart.js?
 
-per host byh mohl mit hranici, co kdy to brat jako ok a pak to v prehledu zobrazovat
 
-asi delat denni prehledy, kdyb budou radky hodiny a sloupce minuty 
-pak udelat i dalsi prehledy
+chart.js - udelat cervene, kdyz to presahne
+chart.js - zkusit spis nespojnicovy graf
+
+pridat sipky tam a zpet, vypsat ktere obdobi prohlizi
+
 
 pihi.php - testy delat pres nfilter
 
