--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
 chart.js - udelat cervene, kdyz to presahne
 
+kdyz se nedopingne, co se ulozi do cacti? 
+Pokud neco poznatelnetho, tak v grafech muzou byt videt vypadky
 
+
+readme - blbe enteruju
