--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+myisam - prevest
+
+kdyz mam pihi vypnute, stejne je ve formu
+
+
 chart.js - udelat cervene, kdyz to presahne
 
 kdyz se nedopingne, co se ulozi do cacti? 
